# Media-Content-Service

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  scratch_kroki.py
app/: config.py  main.py
app/api/: router.py
app/api/routes/: media.py  news.py
app/db/: models.py
app/integrations/: s3_client.py
app/messaging/: publisher.py
app/schemas/: media.py  news.py
docs/: asyncapi.yaml  behaviors.md  c4_component.xml  erd.xml  openapi.yaml
