[tool.poetry]
name = "media-service"
version = "0.1.0"
description = "Media and Content Service for Esports Hub"
authors = ["Team Member <email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
boto3 = "^1.34.34"
pika = "^1.3.2"
python-multipart = "^0.0.9"
pydantic-settings = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
